language/move-prover/tests/sources/functional/hash_model_invalid.exp
Move prover returns: exiting with boogie verification errors
error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/hash_model_invalid.move:22:9 ───
    │
 22 │         ensures len(result_1) > 0 ==> result_1[0] < max_u8(); // should be <=
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/hash_model_invalid.move:11:5: hash_test1 (entry)
    =     at tests/sources/functional/hash_model_invalid.move:13:24: hash_test1
    =         h1 = <redacted>
    =     at tests/sources/functional/hash_model_invalid.move:14:33: hash_test1
    =         h2 = <redacted>
    =     at tests/sources/functional/hash_model_invalid.move:15:10: hash_test1
    =         result_1 = <redacted>,
    =         result_2 = <redacted>
    =     at tests/sources/functional/hash_model_invalid.move:11:5: hash_test1 (exit)

error:  A postcondition might not hold on this return path.

    ┌── tests/sources/functional/hash_model_invalid.move:35:9 ───
    │
 35 │         ensures len(result_1) > 0 ==> result_1[0] < max_u8();
    │         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
    │
    =     at tests/sources/functional/hash_model_invalid.move:26:5: hash_test2 (entry)
    =     at tests/sources/functional/hash_model_invalid.move:28:24: hash_test2
    =         h1 = <redacted>
    =     at tests/sources/functional/hash_model_invalid.move:29:33: hash_test2
    =         h2 = <redacted>
    =     at tests/sources/functional/hash_model_invalid.move:30:10: hash_test2
    =         result_1 = <redacted>,
    =         result_2 = <redacted>
    =     at tests/sources/functional/hash_model_invalid.move:26:5: hash_test2 (exit)
